--- a/website/composer.json
+++ b/website/composer.json
@@ -1,14 +1,15 @@
 {
-    "name": "symfony/website-skeleton",
+    "name": "spipu/symfony-demo",
     "type": "project",
     "license": "MIT",
-    "description": "A skeleton to start a new Symfony website",
+    "description": "A demo to test bundles",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.1",
-        "sensiolabs/security-checker": "^6.0",
+        "predis/predis": "^1.1",
+        "sensio/framework-extra-bundle": "*",
+        "sensiolabs/security-checker": "*",
         "spipu/configuration-bundle": "dev-master",
         "spipu/core-bundle": "dev-master",
         "spipu/ui-bundle": "dev-master",
@@ -16,17 +17,17 @@
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "*",
         "symfony/form": "*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/intl": "*",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/monolog-bundle": "*",
         "symfony/orm-pack": "*",
         "symfony/process": "*",
         "symfony/security-bundle": "*",
         "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/swiftmailer-bundle": "*",
         "symfony/translation": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
@@ -40,12 +41,13 @@
         "phpmd/phpmd": "^2.6",
         "phpmetrics/phpmetrics": "^2.4",
         "phpunit/phpunit": "^8.2",
+        "sebastian/phpcpd": "^4.1",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/browser-kit": "4.3.*",
-        "symfony/css-selector": "4.3.*",
+        "symfony/browser-kit": "*",
+        "symfony/css-selector": "*",
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/dotenv": "*",
+        "symfony/maker-bundle": "*",
         "symfony/profiler-pack": "*"
     },
     "config": {
@@ -54,7 +56,7 @@
         },
         "sort-packages": true,
         "platform": {
-            "php": "7.2.19",
+            "php": "7.3.9",
             "ext-bcmath": "1",
             "ext-ctype": "1",
             "ext-gd": "1",
