--- a/website/config/packages/doctrine.yaml
+++ b/website/config/packages/doctrine.yaml
@@ -13,6 +13,11 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        metadata_cache_driver:
+            type: 'redis'
+            host: '%APP_SETTINGS_REDIS_CACHE_HOST%'
+            port: '%APP_SETTINGS_REDIS_CACHE_PORT%'
+            database: '%APP_SETTINGS_REDIS_CACHE_DB%'
         mappings:
             App:
                 is_bundle: false
