--- a/architecture/conf/template/apache/virtualhost.conf
+++ b/architecture/conf/template/apache/virtualhost.conf
@@ -2,8 +2,8 @@
     ServerName {{ENV_HOST}}
 
     SSLEngine on
-    SSLCertificateFile    /etc/ssl/dev-certs/dev-cert.crt
-    SSLCertificateKeyFile /etc/ssl/dev-certs/dev-cert.key
+    SSLCertificateFile    {{SSL_CERT_PUBLIC}}
+    SSLCertificateKeyFile {{SSL_CERT_PRIVATE}}
 
     Header set X-Content-Type-Options "nosniff"
     Header set X-XSS-Protection "1; mode=block"
@@ -30,6 +30,12 @@
         RewriteRule .* index.php [QSA,L]
     </Directory>
 
+    <Location /admin>
+        Order deny,allow
+        Deny from all
+        Allow from {{APACHE_PROTECT_ADMIN}}
+    </Location>
+
     <Directory ~ "{{ENV_FOLDER}}/{{WEB_FOLDER}}/public/(bundles|media)/">
         Options -Indexes +FollowSymLinks
         AllowOverride None
@@ -53,6 +59,9 @@
     <FilesMatch "\.php$">
         SetHandler "proxy:fcgi://localhost:9000"
     </FilesMatch>
+
+    XSendFile on
+    XSendFilePath "{{EXPORT_FOLDER}}"
 
     LogLevel notice
     ErrorLog /var/log/apache2/{{ENV_NAME}}-error.log
