--- a/website/composer.json
+++ b/website/composer.json
@@ -27,27 +27,26 @@
         "symfony/process": "*",
         "symfony/security-bundle": "*",
         "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "*",
         "symfony/translation": "*",
-        "symfony/twig-bundle": "*",
+        "symfony/twig-pack": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
         "symfony/yaml": "*"
     },
     "require-dev": {
-        "edgedesign/phpqa": "^1.22",
+        "edgedesign/phpqa": "^1.23",
         "jakub-onderka/php-parallel-lint": "^1.0",
         "pdepend/pdepend": "^2.5",
-        "phpmd/phpmd": "^2.6",
+        "phpmd/phpmd": "^2.7",
         "phpmetrics/phpmetrics": "^2.4",
-        "phpunit/phpunit": "^8.2",
         "sebastian/phpcpd": "^4.1",
-        "squizlabs/php_codesniffer": "^3.4",
+        "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
         "symfony/maker-bundle": "*",
+        "symfony/phpunit-bridge": "^v4.4",
         "symfony/profiler-pack": "*"
     },
     "config": {
@@ -91,6 +90,7 @@
         "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
@@ -115,7 +115,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "v4.4.*"
         }
     }
 }
