--- a/website/config/packages/cache.yaml
+++ b/website/config/packages/cache.yaml
@@ -1,19 +1,16 @@
 framework:
     cache:
-        # Put the unique name of your app here: the prefix seed
-        # is used to compute stable namespaces for cache keys.
-        #prefix_seed: your_vendor_name/app_name
+        # Unique name of your app: used to compute stable namespaces for cache keys.
+        prefix_seed: "demo"
 
-        # The app cache caches to the filesystem by default.
+        # The "app" cache stores to the filesystem by default.
+        # The data in this cache should persist between deploys.
         # Other options include:
 
         # Redis
-        #app: cache.adapter.redis
-        #default_redis_provider: redis://localhost
-
-        # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
-        #app: cache.adapter.apcu
+        app: "%APP_SETTINGS_CACHE_APP%"
+        default_redis_provider: "%APP_SETTINGS_REDIS_CACHE_URL%"
 
         # Namespaced pools use the above "app" backend by default
         #pools:
-            #my.dedicated.cache: ~
+            #my.dedicated.cache: null
