--- a/website/config/packages/security_checker.yaml
+++ b/website/config/packages/security_checker.yaml
@@ -1,8 +1,9 @@
 services:
-    _defaults:
-        autowire: true
-        autoconfigure: true
+    SensioLabs\Security\SecurityChecker:
+        public: false
 
-    SensioLabs\Security\SecurityChecker: ~
-
-    SensioLabs\Security\Command\SecurityCheckerCommand: ~
+    SensioLabs\Security\Command\SecurityCheckerCommand:
+        arguments: ['@SensioLabs\Security\SecurityChecker']
+        public: false
+        tags:
+            - { name: console.command, command: 'security:check' }
