update symfony to 4.4.9 + better architecture + add quality tools + add Spipu Process bundle

--- a/website/composer.json
+++ b/website/composer.json
@@ -14,6 +14,7 @@
         "spipu/core-bundle": "dev-master",
         "spipu/ui-bundle": "dev-master",
         "spipu/user-bundle": "dev-master",
+        "spipu/process-bundle": "dev-master",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
