better architecture folder + remove deprecated package + upgrade to symfony 4.4.20

--- a/website/config/app_default_configuration.yaml
+++ b/website/config/app_default_configuration.yaml
@@ -10,3 +10,5 @@ parameters:
     APP_SETTINGS_REDIS_SESSION_DB:    ''
     APP_SETTINGS_REDIS_SESSION_HOST:  ''
     APP_SETTINGS_REDIS_SESSION_PORT:  ''
+    # needed for functional tests
+    APP_SETTINGS_APP_ENCRYPTOR_KEY_PAIR: '%env(APP_ENCRYPTOR_KEY_PAIR)%'
