--- a/website/composer.json
+++ b/website/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "description": "A demo to test bundles",
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "predis/predis": "^1.1",
@@ -35,12 +35,12 @@
     },
     "require-dev": {
         "edgedesign/phpqa": "^1.23",
-        "jakub-onderka/php-parallel-lint": "^1.0",
-        "pdepend/pdepend": "^2.5",
-        "phpmd/phpmd": "^2.7",
-        "phpmetrics/phpmetrics": "^2.4",
-        "sebastian/phpcpd": "^4.1",
-        "squizlabs/php_codesniffer": "^3.5",
+        "php-parallel-lint/php-parallel-lint": "*",
+        "pdepend/pdepend": "*",
+        "phpmd/phpmd": "*",
+        "phpmetrics/phpmetrics": "*",
+        "sebastian/phpcpd": "*",
+        "squizlabs/php_codesniffer": "*",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
         "symfony/debug-pack": "*",
@@ -54,7 +54,7 @@
         },
         "sort-packages": true,
         "platform": {
-            "php": "7.2.24",
+            "php": "7.4.3",
             "ext-bcmath": "1",
             "ext-ctype": "1",
             "ext-gd": "1",
