--- a/website/.gitignore
+++ b/website/.gitignore
@@ -6,7 +6,13 @@
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
