--- a/website/config/packages/framework.yaml
+++ b/website/config/packages/framework.yaml
@@ -1,3 +1,5 @@
+# see https://symfony.com/doc/current/reference/configuration/framework.html
+
 imports:
     - { resource: ../app_default_configuration.yaml }
     - { resource: /etc/symfonydemo/symfony.yaml, ignore_errors: true  }
@@ -8,9 +10,8 @@ parameters:
 
 framework:
     secret: '%APP_SETTINGS_APP_SECRET%'
-    #default_locale: en
     #csrf_protection: true
-    #http_method_override: true
+    http_method_override: true
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
@@ -18,8 +19,15 @@ framework:
         handler_id: 'app.session.handler'
         cookie_secure: auto
         cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
 
     #esi: true
     #fragments: true
     php_errors:
         log: true
+
+when@test:
+    framework:
+        test: true
+        session:
+            storage_factory_id: session.storage.factory.mock_file
