--- a/website/config/services.yaml
+++ b/website/config/services.yaml
@@ -2,8 +2,9 @@
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    locale: 'en'
     # Encryptor Configuration
     spipu.core.encryptor.key_pair: "%APP_SETTINGS_APP_ENCRYPTOR_KEY_PAIR%"
 
@@ -38,23 +39,17 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/App/*'
-        exclude: '../src/App/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/App/Controller'
-        tags: ['controller.service_arguments']
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+        resource: '../src/App/'
+        exclude:
+            - '../src/App/DependencyInjection/'
+            - '../src/App/Entity/'
+            - '../src/App/Kernel.php'
+            - '../src/App/Tests/'
 
     # App Menu Definition
     spipu.ui.service.menu_definition:
         class: 'App\Service\MenuDefinition'
-        arguments:
-            - '@Spipu\ConfigurationBundle\Service\Manager'
+        autowire: true
 
     # Spipu User Bundle Configuration
     Spipu\UserBundle\Service\ModuleConfigurationInterface:
