--- a/website/composer.json
+++ b/website/composer.json
@@ -7,13 +7,19 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.4",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.5",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.10",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "predis/predis": "^1.1",
         "sensio/framework-extra-bundle": "*",
         "spipu/configuration-bundle": "dev-master",
         "spipu/core-bundle": "dev-master",
+        "spipu/process-bundle": "dev-master",
         "spipu/ui-bundle": "dev-master",
         "spipu/user-bundle": "dev-master",
-        "spipu/process-bundle": "dev-master",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
@@ -23,30 +29,35 @@
         "symfony/http-client": "*",
         "symfony/intl": "*",
         "symfony/monolog-bundle": "*",
-        "symfony/orm-pack": "*",
         "symfony/process": "*",
+        "symfony/property-access": "v4.4.*",
+        "symfony/property-info": "v4.4.*",
+        "symfony/proxy-manager-bridge": "v4.4.*",
         "symfony/security-bundle": "*",
-        "symfony/serializer-pack": "*",
+        "symfony/serializer": "v4.4.*",
         "symfony/translation": "*",
-        "symfony/twig-pack": "*",
+        "symfony/twig-bundle": "v4.4.*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "edgedesign/phpqa": "^1.23",
-        "php-parallel-lint/php-parallel-lint": "*",
         "pdepend/pdepend": "*",
+        "php-parallel-lint/php-parallel-lint": "*",
         "phpmd/phpmd": "*",
         "phpmetrics/phpmetrics": "*",
         "sebastian/phpcpd": "*",
         "squizlabs/php_codesniffer": "*",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
-        "symfony/debug-pack": "*",
+        "symfony/debug-bundle": "^4.4",
         "symfony/dotenv": "*",
         "symfony/maker-bundle": "*",
-        "symfony/profiler-pack": "*"
+        "symfony/stopwatch": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4"
     },
     "config": {
         "preferred-install": {
@@ -73,6 +84,10 @@
             "ext-pdo_mysql": "1",
             "ext-soap": "1",
             "lib-libxml": "1"
+        },
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/flex": true
         }
     },
     "autoload": {
