upgrade composer dependencies

--- a/website/composer.json
+++ b/website/composer.json
@@ -22,11 +22,11 @@
         "phpdocumentor/reflection-docblock": "*",
         "predis/predis": "*",
         "sensio/framework-extra-bundle": "*",
-        "spipu/configuration-bundle": "dev-sf5",
-        "spipu/core-bundle": "dev-sf5",
-        "spipu/ui-bundle": "dev-sf5",
-        "spipu/user-bundle": "dev-sf5",
-        "spipu/process-bundle": "dev-sf5",
+        "spipu/configuration-bundle": "*",
+        "spipu/core-bundle": "*",
+        "spipu/ui-bundle": "*",
+        "spipu/user-bundle": "*",
+        "spipu/process-bundle": "*",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
