add the dashboard bundle

--- a/website/composer.json
+++ b/website/composer.json
@@ -27,6 +27,7 @@
         "spipu/ui-bundle": "*",
         "spipu/user-bundle": "*",
         "spipu/process-bundle": "*",
+        "spipu/dashboard-bundle": "*",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
