--- a/website/config/services.yaml
+++ b/website/config/services.yaml
@@ -60,3 +60,8 @@ services:
             - '\App\Entity\User'
             - true
             - true
+
+    App\WidgetSource\:
+        resource: '../src/App/WidgetSource/*'
+        tags: [ 'spipu.widget.source' ]
+        autowire: true
