update composer dependencies

--- a/website/composer.json
+++ b/website/composer.json
@@ -60,7 +60,6 @@
         "pdepend/pdepend": "*",
         "phpmd/phpmd": "*",
         "phpmetrics/phpmetrics": "*",
-        "sebastian/phpcpd": "*",
         "squizlabs/php_codesniffer": "*",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
@@ -109,15 +108,12 @@
             "App\\": "src/App/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
     "replace": {
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*"
+        "symfony/polyfill-php72": "*",
+        "sebastian/phpcpd": "*",
+        "phploc/phploc": "*"
     },
     "scripts": {
         "auto-scripts": {
