--- a/website/composer.json
+++ b/website/composer.json
@@ -5,7 +5,7 @@
     "description": "A demo to test bundles",
     "prefer-stable": true,
     "require": {
-        "php": "^8.1",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-iconv": "*",
@@ -14,14 +14,11 @@
         "ext-posix": "*",
         "ext-sodium": "*",
         "ext-zip": "*",
-        "composer/package-versions-deprecated": "*",
-        "doctrine/annotations": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "*",
         "doctrine/orm": "*",
         "phpdocumentor/reflection-docblock": "*",
         "predis/predis": "*",
-        "sensio/framework-extra-bundle": "*",
         "spipu/configuration-bundle": "*",
         "spipu/core-bundle": "*",
         "spipu/ui-bundle": "*",
@@ -30,18 +27,20 @@
         "spipu/dashboard-bundle": "*",
         "symfony/asset": "*",
         "symfony/console": "*",
+        "symfony/dotenv": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "*",
         "symfony/form": "*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/intl": "*",
+        "symfony/mailer": "*",
+        "symfony/mime": "*",
         "symfony/monolog-bundle": "*",
         "symfony/notifier": "*",
         "symfony/process": "*",
         "symfony/property-access": "*",
         "symfony/property-info": "*",
-        "symfony/proxy-manager-bridge": "*",
         "symfony/runtime": "*",
         "symfony/security-bundle": "*",
         "symfony/serializer": "*",
@@ -65,7 +64,6 @@
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
         "symfony/debug-bundle": "*",
-        "symfony/dotenv": "*",
         "symfony/maker-bundle": "*",
         "symfony/stopwatch": "*",
         "symfony/var-dumper": "*",
@@ -73,9 +71,6 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "preferred-install": {
-            "*": "dist"
-        },
         "sort-packages": true,
         "platform": {
             "php": "8.1.2",
@@ -113,6 +108,10 @@
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
         "sebastian/phpcpd": "*",
         "phploc/phploc": "*"
     },
@@ -135,7 +134,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.4.*"
         }
     }
 }
