--- a/website/config/process/test_hello.yaml
+++ b/website/config/process/test_hello.yaml
@@ -5,7 +5,8 @@ spipu_process:
         options:
             can_be_put_in_queue: true
             can_be_rerun_automatically: false
-            automatic_report: true
+            process_lock:
+                - "test_hello"
 
         steps:
             hello_world:
