--- a/website/config/services.yaml
+++ b/website/config/services.yaml
@@ -13,7 +13,15 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        public: false       # Allows optimizing the container by removing unused services
+
+    # makes classes in src/ available to be used as services
+    # this creates a service per class whose id is the fully-qualified class name
+    App\:
+        resource: '../src/App/'
+        exclude:
+            - '../src/App/DependencyInjection/'
+            - '../src/App/Entity/'
+            - '../src/App/Kernel.php'
 
     # Redis Client - Cache
     app.cache.redis.client:
@@ -36,17 +44,7 @@ services:
             - '@app.session.redis.client'
             - prefix: 'demo_'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/App/'
-        exclude:
-            - '../src/App/DependencyInjection/'
-            - '../src/App/Entity/'
-            - '../src/App/Kernel.php'
-            - '../src/App/Tests/'
-
-    # App Menu Definition
+    # Menu Definition
     spipu.ui.service.menu_definition:
         class: 'App\Service\MenuDefinition'
         autowire: true
@@ -56,7 +54,7 @@ services:
         class: Spipu\UserBundle\Service\ModuleConfiguration
         public: true
         arguments:
-            - 'App:User'
+            - '\App\Entity\User'
             - '\App\Entity\User'
             - true
             - true
