--- a/website/composer.json
+++ b/website/composer.json
@@ -16,7 +16,7 @@
         "ext-zip": "*",
         "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "*",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "*",
         "phpdocumentor/reflection-docblock": "*",
         "predis/predis": "*",
         "spipu/configuration-bundle": "*",
